调试SignIn、SignOut、Visit接口
