# internal/app/web/ginsrv/ping/handles.go
@@ -11,14 +11,14 @@ import (
 // Ping 测试服务路由
 // @Summary      测试服务路由
 // @Description  测试服务路由是否正常服务
-// @Tags         test
+// @Tags         测试
 // @Accept       plain
 // @Produce      plain
 // @Success      200  {object}  string
 // @Failure      400  {object}  gono_web.Response
 // @Failure      404  {object}  gono_web.Response
 // @Failure      500  {object}  gono_web.Response
-// @Router       /ping [get]
+// @Router       /ping [GET]
 func Ping(c *gin.Context) {
 	c.String(http.StatusOK, "PONG %s", time.Now().Format("2006-01-02 15:04:05.000000000"))
 }
